src/test/ui/enum/issue-67945-1.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-67945-1.rs:4:16
   |
LL |         let x: S = 0;
   |                ^ cannot perform const operation using `S`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(generic_const_exprs)]` to allow generic const expressions

error: failed to evaluate the given constant
  --> $DIR/issue-67945-1.rs:2:11
   |
LL |       Var = {
   |  ___________^
LL | |
LL | |         let x: S = 0;
LL | |
LL | |         0
LL | |     },
   | |_____^

error[E0392]: parameter `S` is never used
  --> $DIR/issue-67945-1.rs:1:10
   |
LL | enum Bug<S> {
   |          ^ unused parameter
   |
   = help: consider removing `S`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `S` to be a const parameter, use `const S: usize` instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0392`.
